--- a/deliverables/_independent/virtualbmc.yaml
+++ b/deliverables/_independent/virtualbmc.yaml
@@ -15,3 +15,7 @@ releases:
     projects:
       - repo: openstack/virtualbmc
         hash: ef2c8818e6139904027830435171aff14c6b2407
+  - version: 1.2.0
+    projects:
+      - repo: openstack/virtualbmc
+        hash: 88588769a47ce1c0836bfdcb26729a263c30f8d9
