--- a/deliverables/_independent/sushy-tools.yaml
+++ b/deliverables/_independent/sushy-tools.yaml
@@ -7,3 +7,7 @@ releases:
     projects:
       - repo: openstack/sushy-tools
         hash: a89580a9ff7820e863327bd6b74bba31f7c9c52b
+  - version: 0.2.0
+    projects:
+      - repo: openstack/sushy-tools
+        hash: ec39c99fa1741aec5165f1da71a17799acea9ac5
