Add release note links for Cinder projects
Change-Id: Id354a7bc03eb060525af4f12aa3d1d2cf19531d3

--- a/deliverables/pike/cinder.yaml
+++ b/deliverables/pike/cinder.yaml
@@ -1,6 +1,7 @@
 ---
 launchpad: cinder
 release-model: cycle-with-milestones
+release-notes: https://docs.openstack.org/releasenotes/cinder/pike.html
 team: cinder
 type: service
 releases:
