Add Pike release notes links
Following the release process[1], all projects that are publishing
release notes have the notes link included in their deliverable
file.

Extra changes (like true -> yes) are included due to the use of
edit-deliverables YAML linter.

Change-Id: Ibd63f0f8bf1d406039c0196560768beb9f6650ce

--- a/deliverables/pike/congress.yaml
+++ b/deliverables/pike/congress.yaml
@@ -21,11 +21,10 @@ releases:
         repo: openstack/congress
     version: 6.0.0.0rc1
     highlights:
-      - New library of useful, importable policies greatly reduces
-        barrier to use.
-      - Congress Horizon-plugin separated into congress-dashboard project,
-        with improved usability and helpful new features such as a
-        policy monitoring panel.
+      - 'New library of useful, importable policies greatly reduces barrier to use.'
+      - 'Congress Horizon-plugin separated into congress-dashboard project, with improved
+        usability and helpful new features such as a policy monitoring panel.'
 branches:
   - location: 6.0.0.0rc1
     name: stable/pike
+release-notes: https://docs.openstack.org/releasenotes/congress/pike.html
