--- a/deliverables/pike/freezer.yaml
+++ b/deliverables/pike/freezer.yaml
@@ -36,7 +36,7 @@ releases:
         hash: 4200c9aa5c1fe448c4d77a2ccce03246919f6cf8
       - repo: openstack/freezer-dr
         hash: 44e6f2be51db4edea96b77f3e622caee7f79e269
-
 branches:
   - location: 5.0.0.0rc1
     name: stable/pike
+release-notes: https://docs.openstack.org/releasenotes/freezer/pike.html
