--- a/deliverables/pike/fuxi.yaml
+++ b/deliverables/pike/fuxi.yaml
@@ -11,3 +11,4 @@ releases:
     projects:
       - repo: openstack/fuxi
         hash: 53d7c9ff8bfa95121abfca193ab138df6aa50ad2
+release-notes: https://docs.openstack.org/releasenotes/fuxi/pike.html
