--- a/deliverables/pike/glance.yaml
+++ b/deliverables/pike/glance.yaml
@@ -1,11 +1,11 @@
 ---
 artifact-link-mode: tarball
-include-pypi-link: false
+include-pypi-link: no
 launchpad: glance
 release-model: cycle-with-milestones
 team: glance
 type: service
-release-notes: https://docs.openstack.org/releasenotes/glance/unreleased.html
+release-notes: https://docs.openstack.org/releasenotes/glance/pike.html
 branches:
   - name: stable/pike
     location: 15.0.0.0rc1
