--- a/deliverables/pike/heat.yaml
+++ b/deliverables/pike/heat.yaml
@@ -23,3 +23,4 @@ releases:
     projects:
       - repo: openstack/heat
         hash: 72be93556d091abc4912bf62817a27044e3cf4f1
+release-notes: https://docs.openstack.org/releasenotes/heat/pike.html
