--- a/deliverables/pike/ironic-ui.yaml
+++ b/deliverables/pike/ironic-ui.yaml
@@ -1,10 +1,10 @@
 ---
-include-pypi-link: true
+include-pypi-link: yes
 launchpad: ironic-ui
 release-model: cycle-with-intermediary
 team: ironic
 type: horizon-plugin
-release-notes: https://docs.openstack.org/releasenotes/ironic-ui/unreleased.html
+release-notes: https://docs.openstack.org/releasenotes/ironic-ui/pike.html
 releases:
   - version: 2.3.0
     projects:
