--- a/deliverables/pike/monasca-api.yaml
+++ b/deliverables/pike/monasca-api.yaml
@@ -19,3 +19,4 @@ releases:
 branches:
   - location: 2.2.0
     name: stable/pike
+release-notes: https://docs.openstack.org/releasenotes/monasca-api/pike.html
