--- a/deliverables/pike/monasca-log-api.yaml
+++ b/deliverables/pike/monasca-log-api.yaml
@@ -27,3 +27,4 @@ releases:
 branches:
   - location: 2.3.0
     name: stable/pike
+release-notes: https://docs.openstack.org/releasenotes/monasca-log-api/pike.html
