--- a/deliverables/pike/murano-agent.yaml
+++ b/deliverables/pike/murano-agent.yaml
@@ -11,3 +11,4 @@ releases:
     projects:
       - repo: openstack/murano-agent
         hash: 0430611c60cc21d8e93e0ac439cee39af8f13cae
+release-notes: https://docs.openstack.org/releasenotes/murano-agent/pike.html
