--- a/deliverables/pike/python-freezerclient.yaml
+++ b/deliverables/pike/python-freezerclient.yaml
@@ -19,3 +19,4 @@ releases:
 branches:
   - name: stable/pike
     location: 1.5.0
+release-notes: https://docs.openstack.org/releasenotes/python-freezerclient/pike.html
