--- a/deliverables/pike/python-mistralclient.yaml
+++ b/deliverables/pike/python-mistralclient.yaml
@@ -25,5 +25,5 @@ releases:
     projects:
       - repo: openstack/python-mistralclient
         hash: e328a0570f9c485622d71bbad3a887903b83aaac
-    highlights: >
+    highlights: |
       - Fix how "--limit" is passed to the server for action executions.
