--- a/deliverables/pike/python-tripleoclient.yaml
+++ b/deliverables/pike/python-tripleoclient.yaml
@@ -19,3 +19,4 @@ releases:
         hash: 11ad01782499e3e27318aecc9f01f14eb4415002
 team: tripleo
 type: library
+release-notes: https://docs.openstack.org/releasenotes/python-tripleoclient/pike.html
