--- a/deliverables/pike/sahara.yaml
+++ b/deliverables/pike/sahara.yaml
@@ -47,3 +47,4 @@ releases:
         hash: dd99413cd308883fe0283282515737cee1fce7ae
       - repo: openstack/sahara-image-elements
         hash: d12f6167bbb0d7e0b46821545a85bb4444de0adc
+release-notes: https://docs.openstack.org/releasenotes/sahara/pike.html
