--- a/deliverables/pike/searchlight.yaml
+++ b/deliverables/pike/searchlight.yaml
@@ -23,3 +23,4 @@ releases:
     projects:
       - repo: openstack/searchlight
         hash: a1953b7f143f3bad0928b94c1370e292de93e601
+release-notes: https://docs.openstack.org/releasenotes/searchlight/pike.html
