--- a/deliverables/pike/horizon.yaml
+++ b/deliverables/pike/horizon.yaml
@@ -23,3 +23,4 @@ releases:
 branches:
   - location: 12.0.0.0rc1
     name: stable/pike
+release-notes: https://docs.openstack.org/releasenotes/horizon/pike.html
