--- a/deliverables/pike/ironic-python-agent.yaml
+++ b/deliverables/pike/ironic-python-agent.yaml
@@ -15,3 +15,4 @@ releases:
 branches:
   - location: 2.2.0
     name: stable/pike
+release-notes: https://docs.openstack.org/releasenotes/ironic-python-agent/pike.html
