--- a/deliverables/pike/keystone.yaml
+++ b/deliverables/pike/keystone.yaml
@@ -27,3 +27,4 @@ releases:
 branches:
   - location: 12.0.0.0rc1
     name: stable/pike
+release-notes: https://docs.openstack.org/releasenotes/keystone/pike.html
