--- a/deliverables/pike/manila.yaml
+++ b/deliverables/pike/manila.yaml
@@ -23,3 +23,4 @@ releases:
 branches:
   - location: 5.0.0.0rc1
     name: stable/pike
+release-notes: https://docs.openstack.org/releasenotes/manila/pike.html
