--- a/deliverables/pike/mistral.yaml
+++ b/deliverables/pike/mistral.yaml
@@ -1,5 +1,5 @@
 ---
-include-pypi-link: true
+include-pypi-link: yes
 launchpad: mistral
 release-model: cycle-with-milestones
 team: mistral
@@ -40,3 +40,4 @@ releases:
 branches:
   - location: 5.0.0.0rc1
     name: stable/pike
+release-notes: https://docs.openstack.org/releasenotes/mistral/pike.html
