--- a/deliverables/pike/murano-dashboard.yaml
+++ b/deliverables/pike/murano-dashboard.yaml
@@ -23,3 +23,4 @@ releases:
 branches:
   - location: 4.0.0.0rc1
     name: stable/pike
+release-notes: https://docs.openstack.org/releasenotes/murano-dashboard/pike.html
