--- a/deliverables/pike/networking-baremetal.yaml
+++ b/deliverables/pike/networking-baremetal.yaml
@@ -12,3 +12,4 @@ releases:
 branches:
   - location: 0.1.0
     name: stable/pike
+release-notes: https://docs.openstack.org/releasenotes/networking-baremetal/pike.html
