--- a/deliverables/pike/networking-hyperv.yaml
+++ b/deliverables/pike/networking-hyperv.yaml
@@ -1,5 +1,5 @@
 ---
-include-pypi-link: true
+include-pypi-link: yes
 launchpad: networking-hyperv
 release-model: cycle-with-intermediary
 team: winstackers
@@ -12,3 +12,4 @@ releases:
     projects:
       - repo: openstack/networking-hyperv
         hash: 400c817c337d6571e47af77ae2f33961fb69e75c
+release-notes: https://docs.openstack.org/releasenotes/networking-hyperv/pike.html
