--- a/deliverables/pike/neutron-lbaas.yaml
+++ b/deliverables/pike/neutron-lbaas.yaml
@@ -23,3 +23,4 @@ releases:
 branches:
   - location: 11.0.0.0rc1
     name: stable/pike
+release-notes: https://docs.openstack.org/releasenotes/neutron-lbaas/pike.html
