--- a/deliverables/pike/octavia.yaml
+++ b/deliverables/pike/octavia.yaml
@@ -46,3 +46,4 @@ releases:
 branches:
   - location: 1.0.0.0rc1
     name: stable/pike
+release-notes: https://docs.openstack.org/releasenotes/octavia/pike.html
