--- a/deliverables/pike/oslo.context.yaml
+++ b/deliverables/pike/oslo.context.yaml
@@ -28,3 +28,4 @@ releases:
 branches:
   - name: stable/pike
     location: 2.17.0
+release-notes: https://docs.openstack.org/releasenotes/oslo.context/pike.html
