--- a/deliverables/pike/oslo.messaging.yaml
+++ b/deliverables/pike/oslo.messaging.yaml
@@ -68,3 +68,4 @@ releases:
 branches:
   - name: stable/pike
     location: 5.30.0
+release-notes: https://docs.openstack.org/releasenotes/oslo.messaging/pike.html
