--- a/deliverables/pike/osprofiler.yaml
+++ b/deliverables/pike/osprofiler.yaml
@@ -40,3 +40,4 @@ releases:
 branches:
   - name: stable/pike
     location: 1.11.0
+release-notes: https://docs.openstack.org/releasenotes/osprofiler/pike.html
