--- a/deliverables/pike/python-saharaclient.yaml
+++ b/deliverables/pike/python-saharaclient.yaml
@@ -1,5 +1,5 @@
 ---
-include-pypi-link: true
+include-pypi-link: yes
 launchpad: python-saharaclient
 release-model: cycle-with-intermediary
 team: sahara
@@ -16,3 +16,4 @@ releases:
 branches:
   - name: stable/pike
     location: 1.3.0
+release-notes: https://docs.openstack.org/releasenotes/python-saharaclient/pike.html
