--- a/deliverables/pike/python-swiftclient.yaml
+++ b/deliverables/pike/python-swiftclient.yaml
@@ -1,5 +1,5 @@
 ---
-include-pypi-link: true
+include-pypi-link: yes
 launchpad: python-swiftclient
 release-model: cycle-with-intermediary
 release-notes: https://docs.openstack.org/releasenotes/python-swiftclient/pike.html
