--- a/deliverables/pike/python-troveclient.yaml
+++ b/deliverables/pike/python-troveclient.yaml
@@ -1,5 +1,5 @@
 ---
-include-pypi-link: true
+include-pypi-link: yes
 launchpad: python-troveclient
 release-model: cycle-with-intermediary
 team: trove
@@ -24,3 +24,4 @@ releases:
 branches:
   - name: stable/pike
     location: 2.12.0
+release-notes: https://docs.openstack.org/releasenotes/python-troveclient/pike.html
