--- a/deliverables/pike/solum.yaml
+++ b/deliverables/pike/solum.yaml
@@ -15,3 +15,4 @@ releases:
     projects:
       - repo: openstack/solum
         hash: a327ef08a15e97a445ee895da627039d885d2c95
+release-notes: https://docs.openstack.org/releasenotes/solum/pike.html
