--- a/deliverables/pike/sushy.yaml
+++ b/deliverables/pike/sushy.yaml
@@ -19,3 +19,4 @@ releases:
 branches:
   - name: stable/pike
     location: 1.0.0
+release-notes: https://docs.openstack.org/releasenotes/sushy/pike.html
