--- a/deliverables/pike/cloudkitty.yaml
+++ b/deliverables/pike/cloudkitty.yaml
@@ -4,3 +4,19 @@ launchpad: cloudkitty
 release-model: cycle-with-intermediary
 team: cloudkitty
 type: service
+branches:
+  - name: stable/pike
+    location: 6.0.0
+releases:
+  - version: 6.0.0
+    projects:
+      - repo: openstack/cloudkitty
+        hash: 069ea4ea237a1abbb1a0fe5d81263b69c733ff11
+    highlights: >
+      - Add WSGI support for `cloudkitty-api'
+      - Switch from oslosphinx to openstackdocstheme
+      - Update URLs in documents according to document migration
+      - Fix and improve the gnocchi and gnocchihybrid storage
+      - Updated documentation
+      - Update the devstack plugin
+      - Fix the generated configuration samples
