--- a/deliverables/pike/octavia.yaml
+++ b/deliverables/pike/octavia.yaml
@@ -39,6 +39,10 @@ releases:
       - hash: e0f996dad77f0f6ca8e78b6aad4659dcdc151778
         repo: openstack/octavia
     version: 1.0.0.0rc1
+  - projects:
+      - hash: 2c8cc57156dfec5329aa2f8410f396308b5dea5e
+        repo: openstack/octavia
+    version: 1.0.0.0rc2
 branches:
   - location: 1.0.0.0rc1
     name: stable/pike
