Re-release networking-baremetal 0.1.1 as Pike
We did not have publish-to-pypi jobs when doing 0.1.0 release, now
they're added. Releasing 0.1.1 so they are triggered.

Change-Id: I4a4bd26280c83ba7d352b80b50d1330081d5abef

--- a/deliverables/pike/networking-baremetal.yaml
+++ b/deliverables/pike/networking-baremetal.yaml
@@ -9,6 +9,10 @@ releases:
     projects:
       - repo: openstack/networking-baremetal
         hash: 9208c7ccca9fad185c7ab95dfba7caff8a9e14e8
+  - version: 0.1.1
+    projects:
+      - repo: openstack/networking-baremetal
+        hash: b9f41a2dee5c6fcbdfe73735564222b064d8244d
 branches:
   - location: 0.1.0
     name: stable/pike
