Create stable/pike branch for manila-ui
Create a new minor release to pick up all the
translation since the lib freeze and start the
stable/pike branch from this tag.

Change-Id: I0bf70eed17de375fb5b0e22d07ff6b43e6f22dbe

--- a/deliverables/pike/manila-ui.yaml
+++ b/deliverables/pike/manila-ui.yaml
@@ -17,3 +17,10 @@ releases:
     projects:
       - repo: openstack/manila-ui
         hash: 087948ae1a1e47c97d75437259c8b3577bfdf7ad
+  - version: 2.10.1
+    projects:
+      - repo: openstack/manila-ui
+        hash: 019f6b4e630232d398a595990d29524d8295028f
+branches:
+  - location: 2.10.1
+    name: stable/pike
