Add oslo releases for stable/ocata August 21, 2017
Change-Id: I6a92134c961e8169da8a7a1d45d2dc21164bc595

--- a/deliverables/ocata/oslo.concurrency.yaml
+++ b/deliverables/ocata/oslo.concurrency.yaml
@@ -26,3 +26,7 @@ releases:
     projects:
       - repo: openstack/oslo.concurrency
         hash: 7afbc993f0b59d0fc45b2738d179fd50cd486a5d
+  - version: 3.18.1
+    projects:
+      - repo: openstack/oslo.concurrency
+        hash: 56dca3e7fcc3ab79ccb17de600560cf7065c32f9
