--- a/deliverables/ocata/taskflow.yaml
+++ b/deliverables/ocata/taskflow.yaml
@@ -21,3 +21,7 @@ releases:
     projects:
       - repo: openstack/taskflow
         hash: b3b659f38b7e6879f5c03d2dc0d4cae752802ee5
+  - version: 2.9.1
+    projects:
+      - repo: openstack/taskflow
+        hash: b9f545d699b69c875856f2838c6f34aa23d6240c
