--- a/deliverables/pike/ironic.yaml
+++ b/deliverables/pike/ironic.yaml
@@ -16,3 +16,7 @@ releases:
     projects:
       - repo: openstack/ironic
         hash: 9d914c85939bcbdd64c28ba9899b730c01d74df1
+  - version: 9.0.1
+    projects:
+      - repo: openstack/ironic
+        hash: 16ac17cbb7414254d72a5e791c6ecf7714094277
