kuryr pike release and branch
We are a bit delayed due to August PTO pandemy. We just got the last
patches in. Let's get a branch!

Change-Id: I5fbdf794b3cf018bd1ede75bff8777b187c0d099
Signed-off-by: Antoni Segura Puimedon <antonisp@celebdor.com>

--- a/deliverables/pike/kuryr-kubernetes.yaml
+++ b/deliverables/pike/kuryr-kubernetes.yaml
@@ -3,8 +3,15 @@ launchpad: kuryr-kubernetes
 release-model: cycle-with-intermediary
 team: kuryr
 type: other
+branches:
+  - name: stable/pike
+    location: 0.2.0
 releases:
   - version: 0.1.0
     projects:
       - repo: openstack/kuryr-kubernetes
         hash: 2ea1ea1a2f942d7a29e10903ac2f1ea502a5a52e
+  - version: 0.2.0
+    projects:
+      - repo: openstack/kuryr-kubernetes
+        hash: a2828664eb5f85f3d7effc7f0006066c17578d61
