--- a/deliverables/newton/aodh.yaml
+++ b/deliverables/newton/aodh.yaml
@@ -37,3 +37,7 @@ releases:
     projects:
       - repo: openstack/aodh
         hash: f87e0d05c4662c14c7a9f49a0a829cf9bf3edbdb
+  - projects:
+      - hash: 1f954b3b828d7aa25665787b36f4a14bb0c94c76
+        repo: openstack/aodh
+    version: 3.0.4
