--- a/deliverables/ocata/aodh.yaml
+++ b/deliverables/ocata/aodh.yaml
@@ -16,3 +16,7 @@ releases:
     projects:
       - repo: openstack/aodh
         hash: 38ba0511e7ff75809c4e5ef05b783c56c34ad641
+  - projects:
+      - hash: ab45afcfe9a531127ab6f06a128ec5db9cfe7a06
+        repo: openstack/aodh
+    version: 4.0.2
