--- a/deliverables/pike/monasca-notification.yaml
+++ b/deliverables/pike/monasca-notification.yaml
@@ -16,6 +16,10 @@ releases:
       - hash: 20479d1c1d88153722d91b3d4d228647940b4665
         repo: openstack/monasca-notification
     version: 1.10.0
+  - projects:
+      - hash: cc13bcae010534e5ec04f6af95bf95a27e1474cd
+        repo: openstack/monasca-notification
+    version: 1.10.1
 branches:
   - location: 1.10.0
     name: stable/pike
