ocata: release nova 15.0.7
Change-Id: I2352aacccc6ff9f18853e82c85afd05ffd5834fb

--- a/deliverables/ocata/nova.yaml
+++ b/deliverables/ocata/nova.yaml
@@ -109,3 +109,11 @@ releases:
           string parameters during simple_cell_setup/map_cell0 commands.
         * Bug 1689692: Fix paging over cells where the marker is found in the
           cell0 database.
+  - version: 15.0.7
+    projects:
+      - repo: openstack/nova
+        hash: 6c67eee6f4a40c5e84beb2950c45e9fe5dcf9fd1
+    highlights: >
+      - Several bug fixes.
+      - Fixes a regression in Ocata where scheduler driver configuration
+        options were restricted without a deprecation period.
