--- a/deliverables/_independent/kuryr.yaml
+++ b/deliverables/_independent/kuryr.yaml
@@ -28,3 +28,8 @@ releases:
       - repo: openstack/kuryr
         hash: c842d40ef049d50f08d7f226c48f30ec1dfa10e2
         tarball-base: kuryr-lib
+  - version: 0.6.0
+    projects:
+      - repo: openstack/kuryr
+        hash: 917ee686c1a824f23dfb80c0462be2d33502203e
+        tarball-base: kuryr-lib
