--- a/deliverables/pike/vitrage-dashboard.yaml
+++ b/deliverables/pike/vitrage-dashboard.yaml
@@ -16,3 +16,7 @@ releases:
     projects:
       - repo: openstack/vitrage-dashboard
         hash: 4d5727d72e61d6bd9f6ef24bbbf244480b8539f8
+  - version: 1.3.1
+    projects:
+      - repo: openstack/vitrage-dashboard
+        hash: 3ab435fa6b76c16c552a6cf95b4e16cc29499c13
