--- a/deliverables/pike/vitrage.yaml
+++ b/deliverables/pike/vitrage.yaml
@@ -20,3 +20,7 @@ releases:
     projects:
       - repo: openstack/vitrage
         hash: 0431b626f6779b91cc8087e14892d3534c7a9211
+  - version: 1.8.1
+    projects:
+      - repo: openstack/vitrage
+        hash: a4d14d248dc32f1402939895fc25164a57066f2c
