--- a/deliverables/pike/panko.yaml
+++ b/deliverables/pike/panko.yaml
@@ -3,3 +3,11 @@ launchpad: panko
 release-model: cycle-with-intermediary
 team: Telemetry
 type: service
+releases:
+  - projects:
+      - hash: 7f811a3fa915f1d18cbc817e892957324183761a
+        repo: openstack/panko
+    version: 3.0.0
+branches:
+  - location: 3.0.0
+    name: stable/pike
